feat(damage): add configurable combat formulas and effects
- DamageConfig: add tunable sections for old combat attack speed,
  interval damage, criticals, knockback, weapon reduction, armour
  reduction and potion effects, with vanilla defaults and comments
- DamagePotionEffectListener: add melee strength and weakness handling
  for players, scale potion damage by captured attack charge in vanilla
  combat, apply resistance by damage type tags and clear stored charge
  on quit
- DamageWeaponReductionListener: read sharpness and attack charge
  scaling from config on each hit instead of fixed constants
- DamageCriticalListener: read critical enablement and multiplier from
  config on each hit
- DamageIntervalListener: read timed damage amounts and starvation
  health floors from config on each tick
- DamageKnockbackListener: read knockback strength and grounded
  vertical cap from config on each hit
- DamageAttackSpeedListener: read old combat attack speed from config
  when setting player attributes
- DamageArmourReductionListener: read armour and protection formulas
  from config, use damage type tags for bypass checks and move
  resistance handling to the potion effect listener
- readme.md: document configurable combat settings, potion effect
  handling, interval damage behavior and the expanded damage listeners